<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_settings"
            android:background="@drawable/gear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_game"
            android:textSize="80sp"
            android:textColor="@color/text_color"/>
    </FrameLayout>

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:visibility="invisible"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/button_start_game"
        android:text="@string/start"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/button_text_color"
        android:background="@color/button_color"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="@color/button_color"
            android:id="@+id/button_logout"
            android:text="@string/logout"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/button_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/account_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/touch_area"
            app:srcCompat = "@drawable/user"
            android:scaleType="fitXY"
            android:background="@null"
            />

        <ImageButton
            android:id="@+id/achievements_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/leaderboard"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_leaderboard" />

    </LinearLayout>

</LinearLayout>